[tool.poetry]
name = "epuls"
version = "0.1.0"
description = ""
authors = ["MatRos-sf <mateuszrosenkranz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-environ = "^0.11.2"
factory-boy = "^3.3.0"

[tool.djlint]
profile="django"
ignore="H030,H031"

[tool.ruff]
line-length = 88
ignore = [
    "F403"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
