[tool.poetry]
name = "epuls"
version = "0.1.0"
description = ""
authors = ["MatRos-sf <mateuszrosenkranz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
django-environ = "^0.11.2"
factory-boy = "^3.3.0"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2023.1"
coverage = "^7.4.1"
parameterized = "^0.9.0"
pillow = "^10.2.0"

[tool.djlint]
profile="django"
ignore="H030,H031,H021,T003"

[tool.ruff]
line-length = 88
ignore = [
    "F403"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
